# Dummy-Hashing

Python/: SecurityAssessment.ipynb  results.csv
Rust/: Cargo.toml  README.md  bruteforce.csv
Rust/benches/: my_benchmark.rs
Rust/src/: main.rs
