[package]
name = "hashing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
itertools = "0.11.0"
csv = "1.3.0"
rand = "0.8.4"
statistics = "0.4.1"
[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false


[lib]
name = "runattacks" 
path = "src/main.rs"
